--- a/everything-install.yml
+++ b/everything-install.yml
@@ -1,13 +1,14 @@
 
 ---
 
-# Installs Anthos Bare Metal on inventory of "workers"
-- hosts: workers
+# Installs Anthos Bare Metal on all inventory
+- hosts: all
   become: true
   become_user: root
   roles:
     - validate
     - google-tools
+    - update
     - ready-ubuntu
     - setup-kvm
     - abm-install
