--- a/inventory-cloud-example.yaml
+++ b/inventory-cloud-example.yaml
@@ -1,7 +1,7 @@
 # NOTE: This is a template YAML file that dynamically creates inventory based on the below parameters
 # To use this, type the following (will create file inventory/02-gcp.yaml). Optionally, just copy the file and manually change environment variables
 
-# envsubt < gcp-inventory-example.yaml > inventory/02-gcp.yaml
+# envsubt < inventory-cloud-example.yaml > inventory/gcp.yaml
 
 plugin: google.cloud.gcp_compute
 projects:
