--- a/roles/abm-install/vars/main.yml
+++ b/roles/abm-install/vars/main.yml
@@ -30,7 +30,9 @@ skip_preflight: false
 pod_cidr: "172.24.0.0/16"
 services_cidr: "10.50.0.0/16"    # avoid overlap with KIND IPs (10.96.0.0/16)
 local_pvc_mount: "/opt/pvc-disk"
+local_share_pvc_mount: "/opt/localpv-share" # Default value
 enable_application_logging: true
+container_runtime: "docker" # default
 
 # NOTE: Cluster-specific variables are in the inventory file
 
