adding gcloud path variable

--- a/roles/ready-ubuntu/tasks/setup-docker-apt.yml
+++ b/roles/ready-ubuntu/tasks/setup-docker-apt.yml
@@ -86,3 +86,5 @@
 - name: Set GCloud to authenticate docker
   command:
     cmd: gcloud auth configure-docker -q
+  environment:
+    PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
