--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -61,7 +61,7 @@
 ## TODO: Take this out after the official fix has been committed
 - name: Setup kernel in response to b/192342102
   command:
-    cmd: cat /proc/sys/net/netfilter/nf_conntrack_max 262144
+    cmd: sysctl net.netfilter.nf_conntrack_max=393216
   tags:
   - temp-fix
   - ubuntu-setup
