--- a/roles/google-tools/tasks/main.yml
+++ b/roles/google-tools/tasks/main.yml
@@ -166,7 +166,7 @@
 
   - name: Adding k9s utility to machine (optional, but recommended)
     ansible.builtin.unarchive:
-      src: https://github.com/derailed/k9s/releases/download/{{ k9s_version }}/k9s_{{ k9s_version }}_Linux_x86_64.tar.gz
+      src: https://github.com/derailed/k9s/releases/download/{{ k9s_version }}/k9s_Linux_x86_64.tar.gz
       dest: /usr/local/bin
       remote_src: yes
     ignore_errors: true
