Resolve "Switch to a 3-node HA cluster"
For the three x n machines, one of each 3 will have a primary flag

--- a/abm_remove.yml
+++ b/abm_remove.yml
@@ -3,7 +3,7 @@
 
 # Installs Anthos Bare Metal on inventory of "workers"
 # must specify `--tags never` on the CLI to run this
-- hosts: cloud_type_abm
+- hosts: all
   become: true
   become_user: root
   roles:
