--- a/abm_standalone.yml
+++ b/abm_standalone.yml
@@ -2,11 +2,11 @@
 ---
 
 # Installs Anthos Bare Metal on inventory of "workers"
-- hosts: all
+- hosts: cloud_type_abm
   become: true
   become_user: root
   roles:
-    - abm-install
+    # - abm-install
     - abm-software
     - abm-login-token
   vars: []
