--- a/inventory/host_vars/cnuc-1.yaml
+++ b/inventory/host_vars/cnuc-1.yaml
@@ -2,9 +2,14 @@
 ## Vars specifically for CNUC1
 
 cluster_name: "cnuc-1"
-#cluster_index: 10
+primary_cluster_machine: true
 acm_cluster_name: "store-4-1"
-control_plane_ip: "10.200.0.2" # inside vlan 42
+control_plane_ip: "10.200.0.2"
+control_plane_ips: [
+  "10.200.0.2",
+  "10.200.0.3",
+  "10.200.0.4"
+]
 control_plane_vip: "10.200.0.49"
 ingress_vip: "10.200.0.50"
 load_balancer_pool_cidr: "10.200.0.50-10.200.0.70"
