--- a/inventory/host_vars/cnuc-2.yaml
+++ b/inventory/host_vars/cnuc-2.yaml
@@ -3,8 +3,8 @@
 
 cluster_name: "cnuc-2"
 #cluster_index: 10
-acm_cluster_name: "store-5-1"
-control_plane_ip: "10.200.0.2" # inside vlan 42
+acm_cluster_name: "store-4-2"
+control_plane_ip: "10.200.0.3" # TODO: Not functional yet, hardcoded in the config file right now
 control_plane_vip: "10.200.0.49"
 ingress_vip: "10.200.0.50"
 load_balancer_pool_cidr: "10.200.0.50-10.200.0.70"
