--- a/inventory/host_vars/nuc-4.yaml
+++ b/inventory/host_vars/nuc-4.yaml
@@ -1,6 +1,7 @@
 cluster_name: "nuc-4"
 cluster_index: 3
-acm_cluster_name: "store-2-2"
+location_primary: true
+acm_cluster_name: "store-2-1"
 control_plane_ip: "192.168.1.14"
 control_plane_vip: "192.168.1.130"
 ingress_vip: "192.168.1.131"
