--- a/roles/abm-login-token/tasks/main.yml
+++ b/roles/abm-login-token/tasks/main.yml
@@ -6,11 +6,17 @@
     namespace: "config-management-system"
     kubeconfig: "{{ kubeconfig_shared_location }}"
     fact_name: "has_root_repo_ready"
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
   tags:
   - login-token
 
 - name: Display login token for server
   include: get-login-token.yml
-  when: has_root_repo_ready == true
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
+    - (has_root_repo_ready == true)
   tags:
   - login-token
