--- a/roles/abm-software/tasks/main.yml
+++ b/roles/abm-software/tasks/main.yml
@@ -7,6 +7,7 @@
     that:
       - scm_token_user != ""
     fail_msg: "The local environment variable 'SCM_TOKEN_USER' needs to be defined for the target Google Project ID"
+  when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
   tags:
   - verify
 
@@ -15,12 +16,14 @@
     that:
       - scm_token_token != ""
     fail_msg: "The local environment variable 'SCM_TOKEN_TOKEN' needs to be defined for the target Google Project ID"
+  when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
   tags:
   - verify
 
 - name: Remove taint from master node
   command:
     cmd: kubectl taint nodes {{ cluster_name }} node-role.kubernetes.io/master:NoSchedule-
+  when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
   ignore_errors: yes
@@ -34,6 +37,7 @@
     path: '{{ acm_config_files }}'
     state: directory
     mode: '0755'
+  when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
   tags:
   - abm-software
   - abm-config
@@ -42,6 +46,7 @@
   command:
     cmd: gcloud alpha container hub config-management enable
   run_once: true # only needs to run once
+  when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
   environment:
     PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
     GOOGLE_APPLICATION_CREDENTIALS: "/var/keys/gsa-key.json"
@@ -57,6 +62,7 @@
   environment:
     PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
     GOOGLE_APPLICATION_CREDENTIALS: "/var/keys/gsa-key.json"
+  when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
   tags:
   - abm-software
 
@@ -70,6 +76,7 @@
     namespace: ""
     kubeconfig: "{{ kubeconfig_shared_location }}"
     fact_name: "has_acm_operator"
+  when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
   tags:
   - acm-operator
 
@@ -83,7 +90,10 @@
     executable: /bin/bash
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
-  when: has_acm_operator == false
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
+    - (has_acm_operator == false)
   retries: 3
   register: result
   until: result.rc == 0
@@ -95,6 +105,9 @@
   template:
     src: config-management.yaml.j2
     dest: "{{ acm_config_files }}/config-management-configuration.yaml"
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
   tags:
   - acm-config-management
 
@@ -106,6 +119,9 @@
     namespace: "config-management-system"
     kubeconfig: "{{ kubeconfig_shared_location }}"
     fact_name: "has_config_management"
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
   tags:
   - acm-config-management
 
@@ -116,7 +132,9 @@
     kubectl wait --for=condition=established --timeout=600s crd rootsyncs.configsync.gke.io
     exit $?
   when:
-    - has_config_management == false
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
+    - (has_config_management == false)
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
   tags:
@@ -128,6 +146,9 @@
   template:
     src: root-sync.yaml.j2
     dest: "{{ acm_config_files }}/root-sync.yaml"
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
   tags:
   - acm-root-repo
 
@@ -139,15 +160,21 @@
     namespace: "config-management-system"
     kubeconfig: "{{ kubeconfig_shared_location }}"
     fact_name: "has_root_repo_secret"
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
   tags:
   - acm-root-repo
 
 - name: "Create secret token for Root Repo"
   command:
     cmd: "kubectl create secret generic {{ root_repository_git_secret_name }} --namespace='config-management-system' --from-literal='username={{ scm_token_user }}' --from-literal='token={{ scm_token_token }}'"
-  when: has_root_repo_secret == false
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
+    - (has_root_repo_secret == false)
   tags:
   - acm-root-repo
 
@@ -159,6 +186,9 @@
     namespace: "config-management-system"
     kubeconfig: "{{ kubeconfig_shared_location }}"
     fact_name: "has_root_repo_installed"
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
   tags:
   - acm-root-repo
 
@@ -168,9 +198,12 @@
     sleep 10s # just enough for the API to pick up the changes, then wait can take over
     kubectl wait --for=condition=established --timeout=600s crd rootsyncs.configsync.gke.io
     exit $?
-  when: has_root_repo_installed == false
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
+    - (has_root_repo_installed == false)
   tags:
   - acm-root-repo
 
@@ -180,6 +213,9 @@
     kubectl create secret generic gcp-creds --from-file=/var/keys/external-secrets-k8s-creds.json -n external-secrets || true
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
   tags:
   - abm-software
   - external-secrets
@@ -200,7 +236,9 @@
     GOOGLE_APPLICATION_CREDENTIALS: "/var/keys/gsa-key.json"
   loop: "{{ franchises }}"
   when:
-    - cluster_name == item.stores[0]
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
+    - (cluster_name == item.stores[0])
   tags:
   - abm-software
   - enable-acm
@@ -217,7 +255,9 @@
   changed_when: '"ADDED" in out.stdout_lines'
   loop: "{{ franchises }}"
   when:
-    - cluster_name == item.stores[0]
+    - (cluster_name == item.stores[0])
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
   environment:
     PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
     GOOGLE_APPLICATION_CREDENTIALS: "/var/keys/gsa-key.json"
