--- a/inventory/host_vars/nuc-3.yaml
+++ b/inventory/host_vars/nuc-3.yaml
@@ -2,6 +2,5 @@ cluster_name: "nuc-3"
 cluster_index: 2
 acm_cluster_name: "store-1-3"
 control_plane_ip: "192.168.1.13"
-control_plane_vip: "192.168.1.120"
-ingress_vip: "192.168.1.121"
-load_balancer_pool_cidr: "192.168.1.121-192.168.1.129"
+
+primary_ip: "192.168.1.11"
