--- a/inventory/host_vars/nuc-4.yaml
+++ b/inventory/host_vars/nuc-4.yaml
@@ -1,8 +1,13 @@
 cluster_name: "nuc-4"
 cluster_index: 3
-location_primary: true
+primary_cluster_machine: true
 acm_cluster_name: "store-2-1"
 control_plane_ip: "192.168.1.14"
-control_plane_vip: "192.168.1.130"
-ingress_vip: "192.168.1.131"
-load_balancer_pool_cidr: "192.168.1.131-192.168.1.139"
+control_plane_ips: [
+  "192.168.1.14",
+  "192.168.1.15",
+  "192.168.1.16"
+]
+control_plane_vip: "192.168.1.140"
+ingress_vip: "192.168.1.141"
+load_balancer_pool_cidr: "192.168.1.141-192.168.1.149"
