--- a/inventory/host_vars/nuc-6.yaml
+++ b/inventory/host_vars/nuc-6.yaml
@@ -1,7 +1,6 @@
 cluster_name: "nuc-6"
 cluster_index: 5
 acm_cluster_name: "store-2-3"
-control_plane_ip: "192.168.1.15"
-control_plane_vip: "192.168.1.140"
-ingress_vip: "192.168.1.141"
-load_balancer_pool_cidr: "192.168.1.141-192.168.1.149"
+control_plane_ip: "192.168.1.16"
+
+primary_ip: "192.168.1.14"
