--- a/inventory/host_vars/cnuc-2.yaml
+++ b/inventory/host_vars/cnuc-2.yaml
@@ -8,3 +8,5 @@ control_plane_ip: "10.200.0.3" # TODO: Not functional yet, hardcoded in the conf
 control_plane_vip: "10.200.0.49"
 ingress_vip: "10.200.0.50"
 load_balancer_pool_cidr: "10.200.0.50-10.200.0.70"
+
+primary_ip: "10.200.0.2"
