--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 # Root code owner
-* @default-codeowner
+* @ensor @sekhrivijay1 @matt-frederick
 
 # Ansible roles
 /roles/ @ensor @sekhrivijay1 @matt-frederick
