Moving install user to ready-ubuntu

--- a/roles/ready-ubuntu/vars/main.yml
+++ b/roles/ready-ubuntu/vars/main.yml
@@ -1,2 +1,5 @@
 ---
 # vars file for ready-ubuntu
+
+# User that has sudo, password less SSH access to control_plane_ip
+abm_install_user: "el-gato"
