2nd stab at installing agents

--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -185,3 +185,13 @@
   tags:
   - docker
   # - never
+  #
+
+
+- name: install ops agent 
+  script: install-agents.sh > /var/log/agent-logs.txt
+  args:
+    creates: /var/log/agent-logs.txt
+  tags:
+  - ops-agent
+
