adjusting permissions for kubeconfig

--- a/roles/abm-remove/tasks/main.yml
+++ b/roles/abm-remove/tasks/main.yml
@@ -39,7 +39,7 @@
 - name: Remove kubeconfig folder
   ansible.builtin.file:
     path: "{{ kubeconfig_shared_root }}"
-    state: "absent"
+    state: absent
   tags:
   - abm-remove
   - kubeconfig-remove
