--- a/roles/abm-install/tasks/share-kubeconfig.yml
+++ b/roles/abm-install/tasks/share-kubeconfig.yml
@@ -6,25 +6,13 @@
     state: "directory"
     mode: '0777'
     group: sudo
-    owner: "{{ abm_install_user }}"
+    owner: root
   tags:
   - abm-post-install
   - abm-install
   - kubeconfig-share
 
-- name: Symbolic link for primary machines
-  ansible.builtin.file:
-    src: "{{ abm_install_folder }}/bmctl-workspace/{{ cluster_name }}/{{ cluster_name }}-kubeconfig"
-    dest: "{{ kubeconfig_shared_location }}"
-    state: link
-    mode: '0666'
-  when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
-  tags:
-  - abm-post-install
-  - abm-install
-  - kubeconfig-share
-
-# Copy the kubeconfig to local via primary machine
+# Copy the kubeconfig to all other in cluster
 - name: Copy generated kubeconfig to other in cluster
   become_user: "{{ abm_install_user }}"
   command:
@@ -42,6 +30,21 @@
   - kubeconfig-share
   - kube-share
 
+# On primary, setup symbolic link to the desired location
+- name: Symbolic link for primary machines
+  ansible.builtin.file:
+    src: "{{ abm_install_folder }}/bmctl-workspace/{{ cluster_name }}/{{ cluster_name }}-kubeconfig"
+    dest: "{{ kubeconfig_shared_location }}"
+    state: link
+    mode: '0666'
+  when:
+    - primary_cluster_machine is defined
+    - primary_cluster_machine == true
+  tags:
+  - abm-post-install
+  - abm-install
+  - kubeconfig-share
+
 - name: Set permissions to edit for all
   ansible.builtin.file:
     path: "{{ kubeconfig_shared_location }}"
@@ -51,3 +54,14 @@
   - abm-post-install
   - abm-install
   - kubeconfig-share
+
+- name: Test kubectl
+  command:
+    cmd: kubectl cluster-info
+  environment:
+    KUBECONFIG: "{{ kubeconfig_shared_location }}"
+  tags:
+  - abm-post-install
+  - abm-install
+  - kubeconfig-share
+  - kubeconfig-verify
